--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,11 +1,17 @@
 <h1>Create a Song</h1>
 
-<%= form_for @song  do |f| %>
+<%= form_for @song do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title %><br>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %><br>
+  <%= f.label :genre_id %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %><br>
+  <%= f.label :notes %><br>
+    <input name="song[note_contents][]" id="song_notes_1"><br>
+    <input name="song[note_contents][]" id="song_notes_2"><br>
+    <input name="song[note_contents][]" id="song_notes_3"><br>
   <br />
 
   <%= f.submit %>
 <% end %>
-
-
